# trolddom-public

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _ids.txt
include/: CMakeLists.txt
include/kaos-public/: API.h  Base.h  CombatEvent.h  Compiler.h  Component.h  ComponentBase.h  ComponentFactory.h  Compression.h  Cooldowns.h  DataBase.h  DataErrorHandling.h  DataType.h  Effect.h  EffectBase.h  EffectFactory.h  EntityInstance.h  EntityState.h  Helpers.h  ICombatEventQueue.h  ICombatResultQueue.h  IMoveRequestQueue.h  IReader.h  IWorldView.h  IWriter.h  Manifest.h  MapData.h  Parser.h  PersistentIdTable.h  Resource.h  SourceContext.h  SpriteData.h  SpriteInfo.h  Stat.h  System.h  SystemBase.h  SystemFactory.h  Vec2.h
include/kaos-public/Components/: Abilities.h  Combat.h  CombatPrivate.h  CombatPublic.h  DisplayName.h  EquippedItems.h  Inventory.h  NPC.h  Player.h  PlayerPrivate.h  PlayerPublic.h  Position.h  Sprite.h  Talents.h  Wallet.h
include/kaos-public/Data/: Ability.h  Class.h  Entity.h  Faction.h  Map.h  MapEntitySpawn.h  MapPalette.h  MapPlayerSpawn.h  Sprite.h  Talent.h  TalentTree.h
include/kaos-public/Effects/: Damage.h  Kill.h  Stun.h
include/kaos-public/Systems/: Combat.h  NPC.h
include/kpublic/: API.h  ActionBar.h  AuraEffect.h  AuraEffectBase.h  AuraEffectFactory.h  Base.h  CombatEvent.h  Compiler.h  Component.h  ComponentBase.h  ComponentFactory.h  Compression.h  Cooldowns.h  DataBase.h  DataErrorHandling.h  DataType.h  DirectEffect.h  DirectEffectBase.h  DirectEffectFactory.h  Effect.h  EffectBase.h  EffectFactory.h  EntityInstance.h  EntityState.h  EquipmentSlot.h  Hash.h  Helpers.h  IAbilityQueue.h  IAuraEventQueue.h  ICombatEventQueue.h  ICombatResultQueue.h  IMoveRequestQueue.h  IReader.h  IResourceChangeQueue.h  IThreatEventQueue.h  IWorldView.h  IWriter.h  Image.h  ItemInstance.h  ItemInstanceData.h  (+18 more)
include/kpublic/AuraEffects/: Stun.h
include/kpublic/Components/: Abilities.h  ActionBars.h  Auras.h  CombatPrivate.h  CombatPublic.h  DisplayName.h  EquippedItems.h  Inventory.h  NPC.h  PlayerCooldowns.h  PlayerPrivate.h  PlayerPublic.h  Position.h  Sprite.h  Talents.h  Threat.h  ThreatSource.h  ThreatTarget.h  VisibleAuras.h  Wallet.h
include/kpublic/Data/: Ability.h  Aura.h  Class.h  Entity.h  Faction.h  Item.h  Map.h  MapEntitySpawn.h  MapPalette.h  MapPlayerSpawn.h  MapPortal.h  Sprite.h  Talent.h  TalentTree.h
include/kpublic/DirectEffects/: ApplyAura.h  Damage.h  Heal.h  Kill.h  Stun.h
include/kpublic/Effects/: Damage.h  Heal.h  Kill.h  Stun.h
include/kpublic/Systems/: Combat.h  NPC.h
include/tpublic/: API.h  AbilityMetrics.h  AbilityModifierList.h  AbilityRequirements.h  AchievementTable.h  ActionBar.h  ApplyNPCMetrics.h  ArmorStyle.h  AuctionDuration.h  AuraEffect.h  AuraEffectBase.h  AuraEffectFactory.h  AutoDoodads.h  BBox.h  Base.h  Base64.h  CastInProgress.h  CharacterDigest.h  CharacterStat.h  Chat.h  CliffBuilder.h  CombatEvent.h  CombatFunction.h  Common.h  Compiler.h  Component.h  ComponentBase.h  ComponentFactory.h  ComponentManager.h  ComponentPool.h  ComponentPoolBase.h  ComponentPoolChunk.h  ComponentPoolChunkBase.h  ComponentPoolChunkBaseList.h  ComponentSchema.h  Compression.h  Cooldowns.h  CreateName.h  Customization.h  DataBase.h  (+155 more)
include/tpublic/AuraEffects/: AbilityOnFade.h  Absorb.h  Blind.h  CastModifier.h  CombatEventTrigger.h  DamageInputEffect.h  DamageInputModifier.h  DamageOutputModifier.h  HealInputModifier.h  HealOutputModifier.h  Immobilize.h  Immortality.h  MoveSpeedModifier.h  Repeat.h  ResourceCostModifier.h  Stealth.h  Stun.h  Taunt.h  ThreatModifier.h
include/tpublic/Components/: Abilities.h  AbilityModifiers.h  AccountAchievements.h  Achievements.h  ActionBars.h  ActiveQuests.h  Auctioneer.h  Auras.h  CharacterInfoView.h  CombatPrivate.h  CombatPublic.h  CompletedQuests.h  ControlPoint.h  Critter.h  DeityDiscovery.h  DeityRelations.h  DiminishingEffects.h  DisplayName.h  Environment.h  EquippedItems.h  Gateway.h  GuildName.h  GuildRegistrar.h  HoverText.h  NPC.h  (+43 more)
lib/: AbilityModifierList.cpp  AbilityRequirements.cpp  ApplyNPCMetrics.cpp  AuraEffectFactory.cpp  AutoDoodads.cpp  Base64.cpp  CMakeLists.txt  CharacterDigest.cpp  CliffBuilder.cpp  CombatFunction.cpp  Compiler.cpp  ComponentBase.cpp  ComponentFactory.cpp  ComponentManager.cpp  ComponentPoolChunkBase.cpp  ComponentPoolChunkBaseList.cpp  ComponentSchema.cpp  Compression.cpp  Cooldowns.cpp  CreateName.cpp  DataErrorHandling.cpp  DataReference.cpp  DirectEffectFactory.cpp  DirectionField.cpp  DistanceField.cpp  Document.cpp  DoodadPlacement.cpp  EntityInstance.cpp  Expr.cpp  FileWriter.cpp  FileWriter.h  GearOptimizer.cpp  GenerateWord.cpp  GenerationJob.cpp  GenerationJob.h  Guid.cpp  Hash.cpp  Haste.cpp  Helpers.cpp  Image.cpp  (+80 more)
lib/AuraEffects/: AbilityOnFade.cpp  Absorb.cpp  CastModifier.cpp  CombatEventTrigger.cpp  DamageInputEffect.cpp  DamageOutputModifier.cpp  Repeat.cpp  Stealth.cpp  Stun.cpp
lib/Components/: Auras.cpp  CombatPublic.cpp
lib/Data/: Item.cpp
lib/DirectEffects/: ActivateTrigger.cpp  ApplyAura.cpp  ConsumeAndProduce.cpp  Damage.cpp  Fishing.cpp  Heal.cpp  Interrupt.cpp  Kill.cpp  LearnProfessionAbility.cpp  ModifyFaction.cpp  ModifyResource.cpp  Move.cpp  NPCBehavior.cpp  Open.cpp  ProduceItem.cpp  Push.cpp  RemoveAura.cpp  ResetCooldowns.cpp  Simple.cpp  SpawnEntity.cpp  StartQuest.cpp  StartRoute.cpp  Threat.cpp  TriggerAbility.cpp
lib/MapGenerators/: Dungeon.cpp  World.cpp
lib/ObjectiveTypes/: CollectItems.cpp  DialogueTrigger.cpp  KillNPC.cpp  KillPlayer.cpp  Manual.cpp  ManualBoolean.cpp  ManualCounter.cpp  RouteNPC.cpp  UseAbility.cpp
lib/System/: Combat.cpp  CombatPublic.cpp  Environment.cpp  ManaRegen.cpp  NPC.cpp
lib/Systems/: Combat.cpp  Door.cpp  Environment.cpp  Gateway.cpp  HealthRegen.cpp  ManaRegen.cpp  Minion.cpp  NPC.cpp  Openable.cpp  PVPRift.cpp  Rage.cpp  RandomItemVendor.cpp  Shrine.cpp  Trigger.cpp  VendorRestock.cpp
lib/Test/: AllTests.cpp  TestComponents.cpp  TestCompression.cpp  TestThreatTable.cpp  TestUniformDistribution.cpp
util/: CMakeLists.txt  Main.cpp  Pcheader.h
(+802 files in other folders)
